[package]
name = "nilslof_chess"
version = "0.1.0"
authors = ["nilslof <nilslof@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
nilslof_chess_engine = {path = "engine"}
rouille = "3.0.0"
reqwest = "0.9.20"
regex = "1"




